@@ -3,6 +3,8 @@ v0.9.4
 
     * Added esky.util.appexe_from_executable, a convenience method to
       find the bootstrapping exe corresponding to the running program.
+    * Use "bsdiff4" module in preference to cx-bdiff if available; it's
+      got a simpler API and is pip-installable.
     * py2exe: support the skip_archive option; thanks yflau
 
 
